# yapsnap

./: .gitignore  MANIFEST.in  README.md  cpuopt.py  diarize.py  model_checksums.sha256  pyproject.toml  requirements-lock.txt  yapsnap.py
