[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yapsnap"
version = "0.1.1"
description = "Snap any video URL or local audio/video into a plaintext transcript. CPU-first, offline, single command."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "yapsnap" }]
keywords = ["asr", "transcription", "diarization", "speaker-diarization", "sherpa-onnx", "kroko", "yt-dlp", "youtube", "tiktok", "instagram", "transcribe"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "sherpa-onnx>=1.10",
    "numpy>=1.23",
    "yt-dlp>=2026.3.17",
]

[project.urls]
Homepage = "https://github.com/kouhxp/yapsnap"
Issues = "https://github.com/kouhxp/yapsnap/issues"

[project.scripts]
yapsnap = "yapsnap:main"
transcribe = "yapsnap:main"

[tool.setuptools]
py-modules = ["yapsnap", "diarize"]
